--- a/CryptoDCACalculator/Components/Layout/MainLayout.razor
+++ b/CryptoDCACalculator/Components/Layout/MainLayout.razor
@@ -5,6 +5,16 @@
         <NavMenu />
     </div>
 
+    @* Required *@
+    <MudThemeProvider />
+    <MudPopoverProvider />
+
+    @* Needed for dialogs *@
+    <MudDialogProvider />
+
+    @* Needed for snackbars *@
+    <MudSnackbarProvider />
+
     <main>
         <div class="top-row px-4">
             <a href="https://learn.microsoft.com/aspnet/core/" target="_blank">About</a>
