created investment page

--- a/CryptoDCACalculator/Components/Layout/NavMenu.razor
+++ b/CryptoDCACalculator/Components/Layout/NavMenu.razor
@@ -15,20 +15,14 @@
         </div>
 
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
+            <NavLink class="nav-link" href="invest">
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Invest
             </NavLink>
         </div>
 
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="weather">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
-            </NavLink>
-        </div>
-
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="cryptoOverview">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Crypto Overview
+            <NavLink class="nav-link" href="portofolio">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Portofolio
             </NavLink>
         </div>
     </nav>
